# DocuAgent

./: .replit  README.md  app.py  hf_requirements.txt  pyproject.toml  replit.md
.streamlit/: config.toml
agents/: document_processor.py  extraction_agent.py  ocr_processor.py
attached_assets/: Pasted--UTC-Logs-for-docuagent-cvvx3hgw7rxntt8fxe75z7-streamlit-app--1755688365806_1755688365807.txt  Pasted-Goal-Build-an-agent-that-1-ingests-a-document-PDF-image-2-understands-type-layout-3-ext-1755671836304_1755671836305.txt
models/: schemas.py
utils/: confidence_scoring.py  file_handlers.py  validation.py
